# hbt-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
attic/: Cargo.toml
attic/src/: belnap.rs  bitplane.rs  kleene.rs  lib.rs
cli/: Cargo.toml  build.rs  issues
cli/src/: lib.rs  main.rs  version.rs
cli/tests/: cli.rs
cli/tests/cli/fixtures/: mappings-invalid.yaml  mappings.yaml
cli/tests/cli/snapshots/: basic.dump.stdout  basic.html-output.stdout  basic.mapped.stdout  help.stdout  missing-output.stderr
core/: Cargo.toml
core/src/: collection.rs  entity.rs  format.rs  html.rs  lib.rs  main.rs  markdown.rs  pinboard.rs
core/src/collection/: netscape_bookmarks.jinja  tests.rs
core/src/collection/fixtures/: bookmarks_feeds.html  bookmarks_folders.html  bookmarks_pinboard.html  bookmarks_privacy.html  bookmarks_simple.html  test_collection.json
core/src/collection/snapshots/: hbt_core__collection__tests__html_tests__snapshot_html_feeds.snap  hbt_core__collection__tests__html_tests__snapshot_html_folders.snap  hbt_core__collection__tests__html_tests__snapshot_html_pinboard.snap  hbt_core__collection__tests__html_tests__snapshot_html_privacy.snap  hbt_core__collection__tests__html_tests__snapshot_html_simple.snap  hbt_core__collection__tests__html_tests__snapshot_to_html_feeds.snap  hbt_core__collection__tests__html_tests__snapshot_to_html_folders.snap  hbt_core__collection__tests__html_tests__snapshot_to_html_pinboard.snap  hbt_core__collection__tests__html_tests__snapshot_to_html_privacy.snap  hbt_core__collection__tests__html_tests__snapshot_to_html_simple.snap  hbt_core__collection__tests__snapshot_collection_serialization.snap
core/src/html/: netscape_bookmarks.jinja
core/src/markdown/: tests.rs
core/src/markdown/fixtures/: basic.md  descending_dates.md  indented.md  indented_double.md  inverted_parents.md  label.md  labels.md  mixed_dates.md  multiple_labels.md  nested.md  no_date.md  no_labels.md  no_parent.md  no_title.md  no_url.md  only_date.md  parent.md  parents.md  parents_indented.md  single_parent.md  update.md
core/src/markdown/snapshots/: hbt_core__markdown__tests__basic.snap  hbt_core__markdown__tests__descending_dates.snap  hbt_core__markdown__tests__indented.snap  hbt_core__markdown__tests__indented_double.snap  hbt_core__markdown__tests__inverted_parents.snap  hbt_core__markdown__tests__label.snap  hbt_core__markdown__tests__labels.snap  hbt_core__markdown__tests__mixed_dates.snap  hbt_core__markdown__tests__multiple_labels.snap  hbt_core__markdown__tests__nested.snap  hbt_core__markdown__tests__no_parent.snap  hbt_core__markdown__tests__no_title.snap  hbt_core__markdown__tests__parent.snap  hbt_core__markdown__tests__parents.snap  hbt_core__markdown__tests__parents_indented.snap  hbt_core__markdown__tests__single_parent.snap
core/src/pinboard/: tests.rs
core/src/pinboard/fixtures/: json_sample.json  xml_sample.xml
core/src/pinboard/snapshots/: hbt_core__pinboard__tests__empty.snap  hbt_core__pinboard__tests__json_sample.snap
core/tests/: cli.rs
core/tests/cli/fixtures/: basic.md  mappings.json
core/tests/cli/snapshots/: basic.html.stdout  basic.mapped.tags.stdout  basic.md.stdout  help.stdout  version.stdout
pinboard/: Cargo.toml
pinboard/src/: lib.rs
src/: collection.rs  lib.rs  main.rs  markdown.rs  pinboard.rs
src/collection/: tests.rs
src/collection/snapshots/: hbt__collection__tests__snapshot_collection_serialization.snap
src/markdown/: tests.rs
src/pinboard/: tests.rs
test/: Cargo.toml
test-macros/: Cargo.toml
test-macros/src/: lib.rs
test/tests/: formatting.rs  parsing.rs
tests/: cli.rs
tests/cli/fixtures/: basic.html  basic.md  mappings-invalid.json  mappings.json
tests/cli/snapshots/: basic.dump.stdout  basic.mapped.stdout  basic.tags.stdout  help.stdout
