[workspace]
members = ["cli", "core", "pinboard", "test", "test-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "ISC"

[workspace.dependencies]
clap = { version = "4.5.17", default-features = false, features = ["std", "derive", "help", "string", "usage"] }
schemars = { version = "1.1.0", features = ["chrono04", "url2", "semver1"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_norway = { version = "0.9.42" }
thiserror = "2.0.11"
