[package]
name = "hbt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.17", default-features = false, features = ["std", "derive", "help", "string", "usage"] }
hbt-core = { path = "../core" }
schemars = "1.0.4"
serde_json.workspace = true
serde_yaml = "0.9.34"

[dev-dependencies]
snapbox = { version = "0.6.21", default-features = false, features = ["diff"] }
snapbox-macros = "0.3.10"
