[package]
name = "hbt"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.82"
clap.workspace = true
hbt-core = { path = "../core", features = ["clap"] }
schemars.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
snapbox = { version = "0.6.21", default-features = false, features = ["diff"] }
snapbox-macros = "0.3.10"
