[package]
name = "hbt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.82"
clap.workspace = true
hbt-core = { path = "../core", features = ["clap"] }
schemars.workspace = true
serde_json.workspace = true
serde_norway.workspace = true

[dev-dependencies]
snapbox = { version = "0.6.21", default-features = false, features = ["diff"] }
snapbox-macros = "0.4.0"
