[package]
name = "hbt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja = "2.11.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
quick-xml = { version = "0.38.0" }
schemars = { version = "1.0.4", features = ["chrono04", "url2", "semver1"] }
scraper = { version = "0.23.1", default-features = false }
semver = { version = "1.0.25", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4.1", features = ["serde"] }
