[package]
name = "hbt-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
clap = ["dep:clap"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, optional = true }
minijinja = "2.11.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
quick-xml = { version = "0.38.0" }
schemars.workspace = true
scraper = { version = "0.24.0", default-features = false }
semver = { version = "1.0.25", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror = "2.0.11"
url = { version = "2.4.1", features = ["serde"] }
